--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f8f8f8;
     color: #333;
 }
+
+h1, h2, h3 {
+    font-weight: 700;
+}
+
+p, li {
+    font-weight: 400;
+}
+
 
 nav {
     background: #222;
