--- a/style.css
+++ b/style.css
@@ -100,6 +100,31 @@ nav ul li a:active {
     height: auto;
     border-radius: 10px;
 }
+/* CTA BUTTONS */
+.cta-buttons {
+    margin-top: 20px;
+}
+
+.cta-button {
+    display: inline-block;
+    text-decoration: none;
+    padding: 12px 20px;
+    margin-right: 10px;
+    border: 2px solid #16a085;
+    color: white;
+    background-color: #16a085;
+    font-size: 16px;
+    font-weight: bold;
+    transition: 0.3s;
+    border-radius: 5px;
+}
+
+.cta-button:hover {
+    background-color: #f39c12;
+    border: 2px solid #f39c12;
+    color: white;
+}
+
 
 /* Styling for "Hey There!" */
 .about-text h1 {
